HEAD
	+ Add nameserverDelete and nameserverAdded callbacks to NetworkObserver
3.5.1
	+ Added defensive code to DNSResolver to avoid ifaces down after crash
3.5
	+ Changed ifup coditions on first time save
	+ Changed validation of setDHCPAddress, setRealPPPIface and
	  DHCPCleanUp to allow pseudoterminal interfaces, this is needed for l2tp
	+ Allow network proxy which is listening on localhost
	+ Fixed error which skipped the execution of _preSetConf
	+ Added No-IP to DynDNS
	+ Fix get router MAC after latest changes in Net::ARP library
	+ Updated DynDNS server in ddclient configuration
	+ Set version to 3.5
	+ Fixed wrong call when cleaning up a bundled interface
3.4
	+ Import current DHCP addresses in first setup and when enabling module
	+ Don't allow domain names as target of failover tests, usability
	  changes in failover rules
	+ Removed DNS resolution failover test
	+ Save module config after initialSetup
	+ Added flag to notify when an ifup is set
	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
	+ Implement replicationExcludeKeys() to avoid replication of ifaces in HA
	+ Migrated to use Plack / PSGI API instead of the CGI one
	+ When adding a new IP (viface or static iface) it is checked to avoid
	  collision with the current HA floating IPs
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Added bonding support (contribution by Vsevolod Kukol)
	+ Specifiy local address in failover tests to avoid vlan interface problems
	+ Fix Dynamic DNS with Zentyal Remote as provider when the
	  registration wizard is done
	+ Fixed bad behaviour in interfaces method wizard
	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
	+ Don't generate resolvconf file until all interfaces are up
	+ nameservers() method always return 127.0.0.1 if DNS module is
	  installed and enabled
	+ Fixed dhclient configuration
	+ Fixed some issues with showing of DHCP nameservers and removed
	  related dead code